<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".MainActivity">

    <TextView

            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/chinese"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/selectedFoodText"
            android:fontFamily="@font/muli_bold"
            android:textSize="30sp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
    />
    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@drawable/dd_logo"
            android:id="@+id/imageView" android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/todo"/>
    <Button
            android:text="@string/decide"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/decideBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@color/colorPrimary" android:fontFamily="@font/muli_bold" android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addFoodTxt"
            android:fontFamily="@font/muli_bold" android:hint="@string/add_new_food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/addFoodBtn" android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/add_food"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:id="@+id/addFoodBtn"
            style="@style/Widget.AppCompat.Button.Borderless" android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.54" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toTopOf="@+id/decideBtn"
    />

</android.support.constraint.ConstraintLayout>